[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/kenney_car_kit/suv.glb" type="PackedScene" id=1]
[ext_resource path="res://cars/CarSUV.gd" type="Script" id=2]
[ext_resource path="res://assets/texture_09.png" type="Texture" id=3]
[ext_resource path="res://Smoke.tscn" type="PackedScene" id=4]

[sub_resource type="PhysicsMaterial" id=1]
bounce = 0.1
absorbent = true

[sub_resource type="SphereShape" id=5]

[sub_resource type="SphereMesh" id=3]

[sub_resource type="SpatialMaterial" id=4]
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
albedo_texture = ExtResource( 3 )

[node name="CarSUV" type="Spatial"]
script = ExtResource( 2 )

[node name="CarMesh" parent="." instance=ExtResource( 1 )]

[node name="RayCast" type="RayCast" parent="CarMesh"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.25, 0 )
enabled = true

[node name="Smoke" parent="CarMesh" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.520535, 0, 0.549937 )

[node name="Smoke2" parent="CarMesh" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.474042, 0, 0.549937 )

[node name="Ball" type="RigidBody" parent="."]
mass = 3.0
physics_material_override = SubResource( 1 )
angular_damp = 1.0

[node name="CollisionShape" type="CollisionShape" parent="Ball"]
shape = SubResource( 5 )

[node name="DebugMesh" type="MeshInstance" parent="Ball"]
visible = false
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[editable path="CarMesh"]
